Fix: space between project cards and member alignment

--- a/src/stylesheets/components/_our-team.scss
+++ b/src/stylesheets/components/_our-team.scss
@@ -6,7 +6,11 @@
     display: flex;
     flex-direction: row;
     align-items: center;
-    justify-content: space-between;
+    justify-content: space-around;
     flex-wrap: wrap;
     width: 100%;
+
+    @media(min-width: $screen-md) {
+        justify-content: space-between;
+    }
 }
