--- a/src/stylesheets/components/_portfolio.scss
+++ b/src/stylesheets/components/_portfolio.scss
@@ -17,4 +17,12 @@
             }
         }
     }
+
+    @media(min-width: $screen-md) {
+        justify-content: space-evenly;
+    }
+
+    @media(min-width: $screen-xl) {
+        justify-content: space-between;
+    }
 }
